<resources>
    <string name="app_name">Baby Care</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addChild">Add Child</string>
    <string name="name">Name</string>
    <string name="birthDate">Birth Date</string>
    <string name="add">Add</string>
    <string name="days">days</string>
    <string name="after">after</string>
    <string name="haveToTakeTheVaccination">have to take the vaccination</string>
    <string name="daysRemaining">Days Remaining</string>
    <string name="edit">Edit</string>
    <string name="yourChild">Your child</string>
    <string name="vaccinationName">Vaccination Name</string>
    <string name="today">Today</string>
    <string name="haveAVaccination">have a vaccination</string>
    <string name="haveAVaccinationAfter">have a vaccination after</string>
    <string name="age">Age</string>
    <string name="delete">Delete</string>
    <string name="deleteChild">Delete Child</string>
    <string name="areYouSureYouWantToDeleteThisChild">Are you sure you want to delete this child ?</string>
    <string name="forAge">For Age</string>
    <string name="ageInDays">Age (in days)</string>
    <string name="haveToTakeThisVaccinationAfter">have to take this vaccination</string>
    <string name="notificationDate">Notification Date</string>
    <string name="changeNotificationDate">Change Notification Date</string>
    <string name="change">Change</string>
    <string name="save">Save</string>
    <string name="vaccinations">Vaccinations</string>
    <string name="ads">Ads</string>
    <string name="title_activity_dummy">DummyActivity</string>
    <string name="desc">Description</string>
    <string name="errorWhileSavingTheCavvination">Error while saving the vaccination</string>
    <string name="title">Title</string>
    <string name="errorWhileDeletingTheVaccination">Error While deleting the vaccination</string>
    <string name="fromDay">From Day</string>
    <string name="fromTime">From Time</string>
    <string name="toDay">To Day</string>
    <string name="toTime">To Time</string>
    <string name="sat">Satrday</string>
    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednsday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="search">Search</string>
    <string name="corporations">Corporations</string>
    <string name="price">Price</string>
    <string name="not_found">Not found</string>
    <string name="shouldTakeTheVaccinationAfter">should take the vaccination after</string>
    <string name="kindergartens">Kindergartens</string>
    <string name="vaccinationsForYourChildrens">Vaccinations for your children</string>
    <string name="from">From</string>
    <string name="at">At</string>
    <string name="years">Years</string>
    <string name="to">To</string>
    <string name="more">More</string>
    <string name="ages">Ages</string>
    <string name="openDays">Open Days</string>
    <string name="about">About</string>
    <string name="contactInfo">Contact Information</string>
    <string name="address">Address</string>
    <string name="youHaventAddAnyChildYet">You have not add any child yet !</string>
    <string name="addYourChildrenHereToGetTheVaccinationsForThem">Add your children here, to get the vaccinations for them</string>
    <string name="vaccinationDateForYourChild">Vaccination Date for your child</string>
    <string name="category">Category</string>
    <string name="settings">Settings</string>
    <string name="appTitle">Application Title</string>
    <string name="selectTheDate">Select The Date</string>
    <string name="dateForYourChild">Date for your child</string>
    <string name="haveADate">have a date</string>
    <string name="searchAddress">Search Address</string>
    <string name="addADateForYourChild">Add a date for your child</string>
    <string name="pleaseEnterTheTitle">Please enter the title</string>
    <string name="pleaseChooseTheDate">Please choose the date</string>
    <string name="deleteDate">Delete Date</string>
    <string name="areYouSureYouWantToDeleteThisDate">Are you sure you want to delete this date ?</string>
    <string name="vaccinationsAndDatesForYourChildrens">Vaccinations and dates for your children</string>
    <string name="language">Language</string>
    <string name="changeImage">Change Image</string>
    <string name="all">All</string>
    <string name="to_day">to day</string>
    <string name="to_time">to time</string>
    <string name="exporting">Exporting..</string>
    <string name="importing">Importing..</string>
    <string name="addCat">Add Category</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="removeAd">Remove this Ad</string>
    <string name="yes">Yes</string>
    <string name="removeCategory">Remove this Category</string>
    <string name="removeCor">Remove this Corporation</string>
    <string name="done">Done</string>
    <string name="uploadImage">Uploading image</string>
    <string name="err">Error</string>
    <string name="notifyTime">Notify time:</string>
    <string name="stocks">Stocks</string>
    <string name="monthes">Monthes</string>
    <string name="and">and</string>
    <string name="fromDate">From Date</string>
    <string name="toDate">To Date</string>
    <string name="pleaseSelectFromDateAndToDate">Please selkect from date and to date</string>
    <string name="seconds">Seconds</string>
    <string name="pleaseEnterValidSeconds">Please Enter valid seconds</string>
</resources>
