<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.amarnehsoft.vaccinations.admin.activities.AddEditStockActivity">


                <ImageView
                    android:id="@+id/img"
                    android:layout_width="match_parent"
                    android:src="@drawable/baby"
                    android:scaleType="fitCenter"
                    android:layout_height="100dp" />
    <Button
        android:id="@+id/btnChangeImage"
        android:text="@string/changeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="17sp"
        android:textStyle="bold" />

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/txtPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:hint="@string/price"
                        android:inputType="numberDecimal"
                        android:singleLine="true"
                        android:textColor="#a00"
                        android:textStyle="bold" />

                </LinearLayout>

                <EditText
                    android:id="@+id/txtDesc"
                    android:visibility="visible"
                    android:hint="@string/desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnSave"
        android:text="@string/save"
        android:textColor="@color/white"
        android:background="@drawable/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:textColor="@color/white"
        android:id="@+id/btnDelete"
        android:text="@string/delete"
        android:background="@drawable/btn_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
