<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.amarnehsoft.vaccinations.activities.AddVaccinationActivity">

    <TextView
        android:text="@string/addADateForYourChild"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/pink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/baby"
                android:layout_width="wrap_content"
                android:layout_height="100dp" />

            <TextView
                android:id="@+id/txtName"
                android:text="@string/name"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <TextView
        android:text="@string/title"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txtTitle"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/border_flat"
        android:layout_width="match_parent"
        android:hint="@string/title"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center"
            android:padding="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtDate"
                android:text="@string/selectTheDate"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/brown"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnChange"
                android:text="@string/change"
                android:textAllCaps="false"
                android:background="@drawable/btn"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
