<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.amarnehsoft.vaccinations.admin.activities.AddEditAdsActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:scaleType="centerCrop"
                    android:id="@+id/img"
                    android:src="@drawable/baby"
                    android:layout_width="match_parent"
                    android:layout_height="150dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnSave"
        android:text="@string/save"
        android:textColor="#fff"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnDelete"
        android:text="@string/delete"
        android:textColor="#fff"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
