<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imgName"
                android:src="@drawable/kindergarten"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                android:layout_height="150dp" />
            <Button
                android:id="@+id/btnChangeImage"
                android:text="@string/changeImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:padding="2dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="@drawable/border_flat"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/nameLayout"
                        android:layout_width="match_parent"
                        android:gravity="center_vertical"
                        android:background="?attr/selectableItemBackground"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_margin="5dp"
                            android:src="@drawable/kindergarten"
                            android:layout_width="48dp"
                            android:layout_height="48dp" />
                        <EditText
                            android:textColor="@color/colorPrimary"
                            android:id="@+id/txtName"
                            android:text="@string/name"
                            android:textSize="20sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout"
                        android:visibility="visible"
                        android:orientation="vertical"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:gravity="center_vertical"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:src="@drawable/ic_location_on_black_24dp"
                                android:tint="@color/blue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <EditText
                                android:id="@+id/txtAddress"
                                android:layout_marginStart="5dp"
                                android:hint="@string/address"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:gravity="center_vertical"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:tint="@color/blue"
                                android:src="@drawable/ic_perm_phone_msg_black_24dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <EditText
                                android:id="@+id/txtContact"
                                android:layout_marginStart="5dp"
                                android:hint="@string/contactInfo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:gravity="center_vertical"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:tint="@color/blue"
                                android:src="@drawable/ic_info_outline_black_24dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <EditText
                                android:id="@+id/txtDesc"
                                android:layout_marginStart="5dp"
                                android:hint="@string/desc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btnSave"
                    android:text="@string/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <Button
                android:id="@+id/btnAddCat"
                android:text="@string/add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <FrameLayout
                android:layout_marginTop="2dp"
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>




</LinearLayout>
