<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:background="?attr/selectableItemBackground"
        android:layout_margin="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:src="@drawable/baby"
                android:scaleType="fitCenter"
                android:layout_height="100dp" />

            <TextView
                android:id="@+id/txtName"
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_weight="2"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="17sp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/txtPrice"
                    android:layout_marginStart="5dp"
                    android:text="@string/price"
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="2"
                    android:textStyle="bold"
                    android:textColor="#a00"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtDesc"
                android:visibility="gone"
                android:text="@string/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>