<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp"
    android:background="@drawable/border_flat"
    tools:context="com.amarnehsoft.vaccinations.fragments.ChildrenHorizantalListFragment">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="100dp"
        android:foreground="?attr/selectableItemBackground"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/img"
            android:src="@drawable/ic_child_care_black_24dp"
            android:tint="@color/green"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/btnAddChild"
            android:textColor="@color/white"
            android:text="@string/addChild"
            android:textStyle="bold"
            android:background="@drawable/btn"
            android:padding="10dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="100dp"/>

        <LinearLayout
            android:id="@+id/layout"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/youHaventAddAnyChildYet"
                android:textAlignment="center"
                android:textColor="#a00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/gray"
                android:text="@string/addYourChildrenHereToGetTheVaccinationsForThem"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>



</LinearLayout>
