<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.amarnehsoft.vaccinations.fragments.AddChildFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/baby"
                android:layout_width="match_parent"
                android:layout_height="150dp" />




            <RelativeLayout
                android:id="@+id/nameLayout"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgName"
                    android:tint="@color/brown"
                    android:src="@drawable/ic_child_care_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/name"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_toEndOf="@id/imgName"
                    android:layout_marginStart="5dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:drawableStart="@drawable/ic_child_care_black_24dp"
                    android:id="@+id/txtName"
                    android:padding="10dp"
                    android:background="@drawable/border"
                    android:inputType="textPersonName"
                    android:layout_below="@id/imgName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>
            <android.support.v7.widget.CardView
                app:cardCornerRadius="5dp"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:padding="10dp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/ic_date_range_black_24dp"
                        android:tint="@color/brown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginStart="5dp"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/birthDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txtBirthdate"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:textSize="17sp"
                        android:textAlignment="center"
                        android:layout_marginStart="5dp"
                        android:text="wed, 12-12-1222"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/btnChange"
                        android:textColor="#fff"
                        android:background="@drawable/btn"
                        android:textAllCaps="false"
                        android:text="@string/change"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnAdd"
        android:text="@string/save"
        android:background="@drawable/btn"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
